Init Angular gen tools, read name of file of sub folder, and read content of file : DONE

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-/WindowsFormsApp1/obj/*
-/WindowsFormsApp1/Properties/*
-/WindowsFormsApp1/bin/*
-/WindowsFormsApp1/.vs/*
-/WindowsFormsApp1/AngularGen.csproj
+
+/GenAngularComponent/AngularGenTools/obj/*
+/GenAngularComponent/.vs/*
+/GenAngularComponent/AngularGenTools/Properties/*
+/GenAngularComponent/AngularGenTools/.vs/*
+/GenAngularComponent/AngularGenTools/bin/*
